fixing collapsed navbar content

--- a/newsrc/code/media/com_acctexp/less/aec/navbar.less
+++ b/newsrc/code/media/com_acctexp/less/aec/navbar.less
@@ -82,14 +82,14 @@
 	overflow: hidden;
 
 	.brand {
-		margin: 0 auto;
+		margin: 5px auto 0;
 		padding: 0 16px 0 0;
 	}
 
 	.nav {
 		margin: 0 auto;
 		> li > a {
-			padding: 10px 15px;
+			padding: 15px 15px 14px;
 		}
 	}
 
@@ -100,6 +100,7 @@
 
 	a.toolbar-notify {
 		margin-left: -10px;
+		margin-top: -2px;
 	}
 
 	&-override {
@@ -138,7 +139,7 @@
 
 .head-minify {
 	position: absolute;
-	top: 2px;
+	top: 10px;
 	left: 14px;
 	text-size: 140%;
 	color: #fff;
